# k8s_grpc_rust

./: README.md  build_images.sh  tls.crt  tls.key
clock_tonic/: Cargo.toml  Dockerfile  build.rs
clock_tonic/proto/: clock.proto
clock_tonic/src/: main.rs
db_api/: Cargo.toml  Dockerfile  build.rs  setupdb_server.sh
db_api/migrations/2023-12-30-065229_create_models/: down.sql  up.sql
db_api/migrations/2023-12-30-065345_create_features/: down.sql  up.sql
db_api/src/: main.rs  models.rs  query.rs  schema.rs
k8s_config/: ingress.yaml  services.yaml  workload.yaml
numbers/: Cargo.toml  Dockerfile  build.rs
numbers/src/: main.rs
proto/: clock.proto  dbapi.proto  numbers.proto
