[package]
name = "db_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.1.0", features = ["postgres"] }

[build-dependencies]
tonic-build = "0.10"